# semaphore-cli

./: .env.example  .gitignore  .python-version  CONTRIBUTING.md  README.md  config.example.json  pyproject.toml
semaphore/: __init__.py  cli.py  client.py  schema.py
semaphore/commands/: __init__.py  apply.py  check.py  diff.py  purge.py
semaphore/resources/: __init__.py  environments.py  inventory.py  keys.py  projects.py  repositories.py  templates.py  utils.py
