[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "semaphoreui-client"
version = "0.1.0"
description = "CLI tool to manage SemaphoreUI (Ansible Semaphore) configuration from its native export format"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [
    { name = "Robert-Jan Boezeman" }
]
keywords = ["semaphore", "semaphoreui", "ansible", "automation", "cli", "devops", "infrastructure"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.28",
    "python-dotenv>=1.0",
    "jsonschema>=4.0",
]

[project.urls]
Homepage = "https://github.com/rjboezeman/semaphore-cli"
Repository = "https://github.com/rjboezeman/semaphore-cli"
"Bug Tracker" = "https://github.com/rjboezeman/semaphore-cli/issues"

[project.scripts]
semaphore-cli = "semaphore.cli:main"
